--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <title>
             Home - Gossamer
         </title>
+    </head>
         
-        <style type="text/css">
+    <style type="text/css">
         code {
             background-color: #eee;
             color: black;
@@ -42,3 +43,13 @@
         body {
             background-color: #000000;
         }
+    </style>
+    
+    <body>
+        <center>
+            <ul>
+                <li class="active"><a href="#">Home</a></li>
+            </ul>
+        </center>
+    </body>
+</html>
