--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
     </style>
     
     <body>
-        <center>
-            <ul>
-                <li class="active"><a href="#">Home</a></li>
-            </ul>
-        </center>
+        <font face="courier">
+            <center>
+                <ul>
+                    <li class="active"><a href="#">Home</a></li>
+                </ul>
+            </center>
+        </font>
     </body>
 </html>
