--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             <center>
                 <ul>
                     <li class="active"><a href="#">Home</a></li>
+                    <li><a href="downloads">Downloads</a></li>
+                    <li><a href="forums">Forums</a></li>
+                    <li><a href="wiki">Wiki</a></li>
                 </ul>
             </center>
         </font>
