--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
         
         body {
             background-color: #000000;
+            color: #ffffff;
         }
     </style>
     
     <body>
         <font face="courier">
             <center>
+                <a href="/"><img src="https://pjgossamer.github.io/gossamer.png" alt="Gossamer Logo" width="100%" /></a>
                 <ul>
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="downloads">Downloads</a></li>
@@ -55,6 +57,21 @@
                     <li><a href="wiki">Wiki</a></li>
                 </ul>
             </center>
+        </font>
+        <font face="monospace">
+            <h1>
+                Gossamer
+            </h1>
+            <hr />
+            <p>
+                Welcome to Gossamer. This game is an Open Source clone of Halo that is being developed in the Unreal Engine with hopes that it will be released to PCs. The goals of this project is to feature a fully functional Halo 3-like experience. This game will hopefully feature 18 campaign missions, few firefight maps, few multiplayer maps and game types/variants, and a theater.
+            </p>
+            <br />
+            <hr />
+            <center>
+                <p>
+                    Copyright &copy; SparrOSDeveloperTeam 2015<script>new Date().getFullYear()>2017&&document.write("-"+new Date().getFullYear());</script>, &copy; Innovation Inc. 2009<script>new Date().getFullYear()>2017&&document.write("-"+new Date().getFullYear());</script>, &copy; sparrdrem 2018<script>new Date().getFullYear()>2017&&document.write("-"+new Date().getFullYear());</script>. All rights reserved.
+                </p>
         </font>
     </body>
 </html>
