--- a/forums.html
+++ b/forums.html
@@ -1,2 +1,13 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta http-equiv="refresh" content="5; url='https://pjgossamer.freeforums.net'" />
+        <title>Redirect</title>
+    </head>
+    
+    <body>
+        <center>
+            You are being redirected. If you do not redirect within 5 seconds, click <a href="https://pjgossamer.freeforums.net">here</a>.
+        </center>
+    </body>
+</html>
