--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>
             Home - Gossamer
         </title>
+        <link rel="icon" type="image/png" href="https://pjgossamer.github.io/favicon.png">
     </head>
         
     <style type="text/css">
