--- a/404.html
+++ b/404.html
@@ -1,2 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            404 - Page not found
+        </title>
+    </head>
+    
+    <body>
+        <center>
+            <p>
+                Page not found! Click <a href="/">here</a> to return to the main page.
+            </p>
+        </center>
+    </body>
+</html>
