--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <hr />
             <center>
                 <p>
-                    Copyright &copy; SparrOSDeveloperTeam 2015<script>new Date().getFullYear()>2017&&document.write("-"+new Date().getFullYear());</script>, &copy; Innovation Inc. 2009<script>new Date().getFullYear()>2017&&document.write("-"+new Date().getFullYear());</script>, &copy; sparrdrem 2018<script>new Date().getFullYear()>2017&&document.write("-"+new Date().getFullYear());</script>. All rights reserved.
+                    Copyright &copy; SparrOSDeveloperTeam 2015<script>new Date().getFullYear()>2017&&document.write("-"+new Date().getFullYear());</script>, Copyright &copy; Innovation Inc. 2009<script>new Date().getFullYear()>2017&&document.write("-"+new Date().getFullYear());</script>, Copyright &copy; sparrdrem 2018<script>new Date().getFullYear()>2017&&document.write("-"+new Date().getFullYear());</script>. All rights reserved.
                 </p>
         </font>
     </body>
