--- a/commands.html
+++ b/commands.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-            Console Commands - Gossamer
-        </title>
-        <link rel="icon" type="image/png" href="https://pjgossamer.github.io/favicon.png">
-        <link rel="stylesheet" href="https://pjgossamer.github.io/style.css">
+        <meta http-equiv="refresh" content="5; url='https://docs.unrealengine.com/en-US/Programming/Basics/CommandLineArguments/index.html'" />
+        <title>Redirect</title>
     </head>
+    
+    <body>
+        <center>
+            You are being redirected. If you do not redirect within 5 seconds, click <a href="https://docs.unrealengine.com/en-US/Programming/Basics/CommandLineArguments/index.html">here</a>.
+        </center>
+    </body>
 </html>
