not open source, free

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </h1>
             <hr />
             <p>
-                Welcome to Gossamer. This game is an Open Source clone of Halo that is being developed in the Unreal Engine with hopes that it will be released to PCs. The goals of this project is to feature a fully functional Halo 3-like experience. This game will hopefully feature 18 campaign missions, few firefight maps, few multiplayer maps and game types/variants, and a theater.
+                Welcome to Gossamer. This game is a free clone of Halo that is being developed in the Unreal Engine with hopes that it will be released to PCs. The goals of this project is to feature a fully functional Halo 3-like experience. This game will hopefully feature 18 campaign missions, few firefight maps, few multiplayer maps and game types/variants, and a theater.
             </p>
             <br />
             <hr />
